--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@
 header{
   width: 100%;
   height: 7em;
-  background-color: rgb(57, 203, 183);
+  /* background-color: rgb(57, 203, 183); */
 }
 
 .logo{
@@ -47,23 +47,15 @@ header{
 #currentsStats{
   width: 50%;
   height: auto;
-  background-color: rgb(206, 12, 208);
+  /* background-color: rgb(206, 12, 208); */
 }
 #otherStats{
   width: 50%;
   height: auto;
-  background-color: rgb(181, 8, 17);
+  /* background-color: rgb(181, 8, 17); */
 }
 
 .stats{
   display: flex;
   justify-content: center;
-}
-.soil{
-  margin: 20px;
-  background-color: rgb(27, 19, 250);
-}
-.air{
-  margin: 20px;
-  background-color: rgb(94, 168, 198);
 }
