--- a/Plant'IO - Electron App/assets/css/main.css
+++ b/Plant'IO - Electron App/assets/css/main.css
@@ -8,54 +8,25 @@
   margin: 0;
   font-family: ubuntu;
 }
-
-header{
-  width: 100%;
-  height: 7em;
-  /* background-color: rgb(57, 203, 183); */
+.option {
+  margin: 3px;
 }
 
-.logo{
-  position: absolute;
-  margin-left: 1em;
-  margin-top: 1em;
-  float: left;
-  max-width: 15.625em;
-  max-height: 15.625em;
-}
-.title{
-  position: absolute;
-  left: 50%;
-  top: 8%;
-  transform: translate(-50%, -50%);
+.option img {
+  max-width: 20px;
+  max-height: 20px;
+  -webkit-app-region: no-drag;
+  pointer-events: none;
+  user-select: none;
 }
 
-.verticalSeparator{
-  width: 2px;
-  border-radius: 2px;
-  background-color: #000;
-  height: 50vh;
-  position: absolute;
-  left: 50%;
-  top: 55%;
-  transform: translate(-50%, -50%);
-}
 
-#container{
+
+header {
   display: flex;
-}
-#currentsStats{
-  width: 50%;
-  height: auto;
-  /* background-color: rgb(206, 12, 208); */
-}
-#otherStats{
-  width: 50%;
-  height: auto;
-  /* background-color: rgb(181, 8, 17); */
-}
+  flex-direction: row-reverse;
+  justify-content: flex-start;
+  background-color: rgba(8, 4, 4, 0.64);
+  -webkit-app-region: drag;
 
-.stats{
-  display: flex;
-  justify-content: center;
 }
