--- a/Plant'IO - Electron App/assets/css/main.css
+++ b/Plant'IO - Electron App/assets/css/main.css
@@ -8,8 +8,22 @@
   margin: 0;
   font-family: ubuntu;
 }
+body {
+ background: #333;
+ max-height: 100vw;
+ background-image: url("../img/background.png");
+ background-size: cover;
+ background-repeat: no-repeat;
+}
+
+main {
+  width: 85%;
+  height: 80%;
+  margin: auto;
+  margin-top: 5%;
+}
 .option {
-  margin: 3px;
+  margin: 5px;
 }
 
 .option img {
@@ -21,12 +35,31 @@
 }
 
 
-
 header {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-start;
-  background-color: rgba(8, 4, 4, 0.64);
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: rgba(106, 106, 106, 1);
   -webkit-app-region: drag;
 
+}
+.bar-left {
+  align-self: center;
+}
+.bar-right {
+  display: flex;
+  flex-direction: row-reverse;
+}
+#close:hover {
+   filter: invert(30%) sepia(87%) saturate(7410%) hue-rotate(355deg) brightness(103%) contrast(124%);
+  opacity: 0.77;
+}
+#mini:hover {
+  opacity: 0.77;
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(188deg) brightness(106%) contrast(101%);
+}
+#text_logo img {
+  align-self: flex-end;
+
+  max-width: 70px;
 }
