--- a/Applications/Plant'IO - Electron App - Desktop/Plant'IO-win32-x64/resources/app/assets/css/main.css
+++ b/Applications/Plant'IO - Electron App - Desktop/Plant'IO-win32-x64/resources/app/assets/css/main.css
@@ -26,6 +26,10 @@ main {
   margin: auto;
   margin-top: 4%;
 }
+
+#api-response {
+  display: none;
+}
 .option {
   margin: 5px;
 }
@@ -92,7 +96,7 @@ header {
 #header {
   display: flex;
   justify-content: center;
-  margin-bottom: 2em;
+  margin-bottom: 0.5em;
 }
 
 h1 {
@@ -121,7 +125,6 @@ h1 {
 .stats {
   display: flex;
   flex-direction: column;
-align-items: flex-end;
 }
 
 .button-more button {
